# QualificationTask

./: .gitignore  README.md
AnthonyCode/: Debug.C  Debug_C.d  Debug_C_ACLiC_dict_rdict.pcm  testDeconv.C  testDeconv_C.d  testDeconv_C_ACLiC_dict_rdict.pcm
ArchiveCode/CreatePlots/: Algorithms.sh  Functions.sh  Run.sh  makeFolder.sh
ArchiveCode/PlottingCodeSampleTest/: runDebug.sh
ArchiveCode/ProgramCode/: .root  BaseFunctions.cxx  BaseFunctions.h  BestAlgo.cxx  ClusterPlots.h  Debug.cxx  Evaluate.cxx  Evaluate.h  PostPlot.cxx  deltaR.cxx  exec.sh  exec_deltaR.sh
Parallel_Compute/: Execute.sh  READ.ME2
PlottingCode/: ErrorFinder.py
PlottingCode/CreatePlots/: Algorithms.sh  Functions.sh  RunDebug.sh  run.sh
PlottingCode/PlottingCodeSampleTest/: runDebug.sh
PlottingCode/ProgramCode/: BaseFunctions.cxx  BaseFunctions.h  Check.cxx  ClusterPlots.cxx  Evaluate.cxx  IO.cxx  IO.h  Plotting.cxx  Plotting.h  PostPlot.h  exec.sh  (+1 more)
PostAnalysis/: .asetup.save  CMakeLists.txt
PostAnalysis/PostAnalysis/: 3  CMakeLists.txt
PostAnalysis/PostAnalysis/Data/: .__afs6EF34569C  ParallelSpawner.sh  QuickSpawn.sh
PostAnalysis/PostAnalysis/PostAnalysis/: .RooFitBaseFunctions.h.swp  AlgorithmFunctions.h  AlgorithmTest.h  BaseFunctionTest.h  BaseFunctions.h  Constants.h  Convolution.h  Debug.h  Debugging.h  DerivedFunctions.h  DistributionGenerator.h  Evaluate.h  Evaluate_Fits.h  Experimental.h  ExperimentalBench.h  Fits.h  Functions.h  IO.h  Plotting.h  PresentationFigures.h  ROOT_Alternative.h  ReportFigures.h  RooFitBaseFunctions.h  RooFitFunctions.h  SimpleExampleFits.h  Statistics.h  UnitClosures.h  UnitTest.h  Verification.h
PostAnalysis/PostAnalysis/Root/: .AlgorithmFunctions.cxx.swp  .ExperimentalBench.cxx.swp  .RooFitBaseFunctions.cxx.swp  AlgorithmFunctions.cxx  AlgorithmTest.cxx  BaseFunctionTest.cxx  BaseFunctions.cxx  Convolution.cxx  Debug.cxx  Debugging.cxx  DerivedFunctions.cxx  DistributionGenerator.cxx  Evaluate.cxx  Evaluate_Fits.cxx  Experimental.cxx  ExperimentalBench.cxx  Fits.cxx  Functions.cxx  IO.cxx  LinkDef.h  Plotting.cxx  PresentationFigures.cxx  ROOT_Alternative.cxx  ReportFigures.cxx  RooFitBaseFunctions.cxx  RooFitFunctions.cxx  SimpleExampleFits.cxx  Statistics.cxx  UnitClosures.cxx  UnitTest.cxx  Verification.cxx
PostAnalysis/PostAnalysis/util/: Inter.cxx  PostAnalysis.cxx  lol
PostAnalysisData/: Merger.sh
(+61 files in other folders)
